--- a/project.config.json
+++ b/project.config.json
@@ -36,23 +36,16 @@
     "minifyWXSS": true
   },
   "compileType": "miniprogram",
-  "libVersion": "1.9.93",
-  "appid": "wx01b188dd7220f49d",
+  "libVersion": "3.4.3",
+  "appid": "wx0f2c940a2490a462",
   "projectname": "wxapp-camera-face",
-  "isGameTourist": false,
-  "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
-      "list": []
-    },
-    "game": {
-      "currentL": -1,
-      "list": []
-    },
-    "miniprogram": {
-      "list": []
-    }
+  "condition": {},
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
   }
 }
